--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -11,7 +11,7 @@
   <div class="container">
     <div class="columns is-centered">
       <div class="column is-5">
-        <%= form_with model: @user, url: new_user_registration_path do |f| %>
+        <%= form_with model: @user, url: user_registration_path, method: :post  do |f| %>
        <%= render "public/shared/error_messages", resource: resource %>
         <div class="field">
           <%= f.label :"姓" %>
