--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -33,14 +33,15 @@
             </p>
           </div>
           <div class="form-group">
-          <label for="book_title">おすすめ度</label>
+          <label>おすすめ度</label>
           <div class="main-rating">
                 <div class="ratings mb-3">
-                  <span class="fa fa-star-o" id="star"></span>
-                  <span class="fa fa-star-o" id="star"></span>
-                  <span class="fa fa-star-o" id="star"></span>
-                  <span class="fa fa-star-o" id="star"></span>
-                  <span class="fa fa-star-o" id="star"></span>
+                  <%= javascript_pack_tag "reviews" %>
+                  <span class="fa-star-o" id="star"></span>
+                  <span class="fa-star-o" id="star"></span>
+                  <span class="fa-star-o" id="star"></span>
+                  <span class="fa-star-o" id="star"></span>
+                  <span class="fa-star-o" id="star"></span>
                   <span class="ml-3 rating-value-display"><span id="rating-value-display">0</span>/5</span>
                 </div>
                  <%= f.hidden_field :review, id: "rating-value" %>
@@ -90,4 +91,4 @@
     </div>
   </div>
 </section>
-<%= javascript_pack_tag "reviews" %>
+
