--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -52,7 +52,7 @@
               </table>
               <% if @post.user_id == current_user.id %>
                 <%= link_to "編集画面へ", edit_post_path(@post), class: "button is-success" %>
-                <%= link_to "削除する", edit_post_path(@post), class: "button is-danger" %>
+                <%= link_to "削除する", post_path(@post), class: "button is-danger", method: :delete %>
               <% end %>
             </div>
             <div>
