--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -37,11 +37,11 @@
           <div class="main-rating">
                 <div class="ratings mb-3">
                   <%= javascript_pack_tag "reviews" %>
-                  <span class="fa-star-o" id="star"></span>
-                  <span class="fa-star-o" id="star"></span>
-                  <span class="fa-star-o" id="star"></span>
-                  <span class="fa-star-o" id="star"></span>
-                  <span class="fa-star-o" id="star"></span>
+                  <span class="fa-star-o" id="star"> <i class="fa-solid fa-star"></i></span>
+                  <span class="fa-star-o" id="star"> <i class="fa-solid fa-star"></i></span>
+                  <span class="fa-star-o" id="star"> <i class="fa-solid fa-star"></i></span>
+                  <span class="fa-star-o" id="star"> <i class="fa-solid fa-star"></i></span>
+                  <span class="fa-star-o" id="star"> <i class="fa-solid fa-star"></i></span>
                   <span class="ml-3 rating-value-display"><span id="rating-value-display">0</span>/5</span>
                 </div>
                  <%= f.hidden_field :review, id: "rating-value" %>
