[Modify]スタークラスの修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,8 @@
     <%= csp_meta_tag %>
     <%= include_gon %>
      <script src="https://kit.fontawesome.com/484e6509e8.js" crossorigin="anonymous"></script>
-    <%= stylesheet_link_tag 'application', "reload" %>
-    <%= javascript_pack_tag 'application', 'reload' %>
+    <%= stylesheet_link_tag 'application', media: 'all' %>
+    <%= javascript_pack_tag 'application' %>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   </head>
 
