--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,3 +1,4 @@
+ <%= javascript_pack_tag "packs/reviews" %>
 <section class="hero is-info">
   <div class="hero-body">
     <div class="container">
@@ -90,5 +91,4 @@
     </div>
   </div>
 </section>
- <%= javascript_pack_tag "reviews" %>
 
