--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,4 +1,4 @@
- <%= javascript_pack_tag "packs/reviews" %>
+ <%= javascript_pack_tag "reviews" %>
 <section class="hero is-info">
   <div class="hero-body">
     <div class="container">
